--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,52 +1,98 @@
+# Copyright (c) 2025 Erick Bourgeois, firestoned
+# SPDX-License-Identifier: MIT
+
 name: Main Branch CI/CD
 
 on:
   push:
     branches:
       - main
+  workflow_dispatch:
+
+permissions:
+  contents: read
+  packages: write
+  security-events: write  # For uploading SARIF results
 
 env:
   CARGO_TERM_COLOR: always
   RUST_BACKTRACE: 1
-  K8S_OPENAPI_ENABLED_VERSION: "1.30"
+  K8S_OPENAPI_ENABLED_VERSION: "1.31"
 
 jobs:
-  build:
-    name: Build
+  license-check:
+    name: Verify SPDX License Headers
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Install Rust toolchain
-        uses: dtolnay/rust-toolchain@stable
-
-      - name: Cache cargo registry
-        uses: actions/cache@v4
+      - name: Check license headers
+        uses: firestoned/github-actions/security/license-check@v1.3.2
         with:
-          path: ~/.cargo/registry
-          key: ${{ runner.os }}-cargo-registry-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-cargo-registry-
+          copyright-holder: "Erick Bourgeois, firestoned"
+          license-id: "MIT"
 
-      - name: Cache cargo index
-        uses: actions/cache@v4
+  verify-commits:
+    name: Verify Signed Commits
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
         with:
-          path: ~/.cargo/git
-          key: ${{ runner.os }}-cargo-git-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-cargo-git-
+          fetch-depth: 0  # Fetch all history for verification
 
-      - name: Cache cargo build
-        uses: actions/cache@v4
+      - name: Verify commits are signed
+        uses: firestoned/github-actions/security/verify-signed-commits@v1.3.2
         with:
-          path: target
-          key: ${{ runner.os }}-cargo-build-target-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-cargo-build-target-
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          verify-mode: push
 
-      - name: Build (release)
-        run: make build
+  build:
+    name: Build - ${{ matrix.platform.name }}
+    runs-on: ${{ matrix.platform.os }}
+    needs: [license-check, verify-commits]
+    strategy:
+      fail-fast: false
+      matrix:
+        platform:
+          - name: Linux x86_64
+            os: ubuntu-latest
+            target: x86_64-unknown-linux-gnu
+            artifact_name: bindcar-linux-amd64
+            binary_name: bindcar
+          - name: Linux ARM64
+            os: ubuntu-latest
+            target: aarch64-unknown-linux-gnu
+            artifact_name: bindcar-linux-arm64
+            binary_name: bindcar
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Rust build environment
+        uses: firestoned/github-actions/rust/setup-rust-build@v1.3.2
+        with:
+          target: ${{ matrix.platform.target }}
+
+      - name: Build binary
+        uses: firestoned/github-actions/rust/build-binary@v1.3.2
+        with:
+          target: ${{ matrix.platform.target }}
+
+      - name: Generate SBOM
+        uses: firestoned/github-actions/rust/generate-sbom@v1.3.2
+        with:
+          target: ${{ matrix.platform.target }}
+
+      - name: Upload binary and SBOM artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ matrix.platform.artifact_name }}
+          path: |
+            target/${{ matrix.platform.target }}/release/${{ matrix.platform.binary_name }}
+            *.cdx.*
+          retention-days: 1
 
   test:
     name: Test
@@ -59,29 +105,14 @@ jobs:
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@stable
 
-      - name: Cache cargo registry
-        uses: actions/cache@v4
+      - name: Download x86_64 build artifact
+        uses: actions/download-artifact@v4
         with:
-          path: ~/.cargo/registry
-          key: ${{ runner.os }}-cargo-registry-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-cargo-registry-
+          name: bindcar-linux-amd64
+          path: target/x86_64-unknown-linux-gnu/release/
 
-      - name: Cache cargo index
-        uses: actions/cache@v4
-        with:
-          path: ~/.cargo/git
-          key: ${{ runner.os }}-cargo-git-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-cargo-git-
-
-      - name: Cache cargo build
-        uses: actions/cache@v4
-        with:
-          path: target
-          key: ${{ runner.os }}-cargo-build-target-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-cargo-build-target-
+      - name: Cache cargo dependencies
+        uses: firestoned/github-actions/rust/cache-cargo@v1.3.2
 
       - name: Run tests
         run: make test
@@ -89,6 +120,7 @@ jobs:
   lint:
     name: Lint
     runs-on: ubuntu-latest
+    needs: [license-check, verify-commits]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -98,21 +130,8 @@ jobs:
         with:
           components: rustfmt, clippy
 
-      - name: Cache cargo registry
-        uses: actions/cache@v4
-        with:
-          path: ~/.cargo/registry
-          key: ${{ runner.os }}-cargo-registry-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-cargo-registry-
-
-      - name: Cache cargo index
-        uses: actions/cache@v4
-        with:
-          path: ~/.cargo/git
-          key: ${{ runner.os }}-cargo-git-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-cargo-git-
+      - name: Cache cargo dependencies
+        uses: firestoned/github-actions/rust/cache-cargo@v1.3.2
 
       - name: Check formatting
         run: make fmt
@@ -120,54 +139,100 @@ jobs:
       - name: Run clippy
         run: make clippy
 
-  docker:
-    name: Docker Build and Push
+  extract-version:
+    name: Extract Version Information
     runs-on: ubuntu-latest
-    needs: [build, test, lint]
-    permissions:
-      contents: read
-      packages: write
+    needs: [license-check, verify-commits]
+    outputs:
+      image-tag-chainguard: ${{ steps.version-chainguard.outputs.image-tag }}
+      image-tag-distroless: ${{ steps.version-distroless.outputs.image-tag }}
+      image-repository-chainguard: ${{ steps.version-chainguard.outputs.image-repository }}
+      image-repository-distroless: ${{ steps.version-distroless.outputs.image-repository }}
+      short-sha: ${{ steps.version-chainguard.outputs.short-sha }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v3
+      - name: Extract version for Chainguard
+        id: version-chainguard
+        uses: firestoned/github-actions/versioning/extract-version@v1.3.2
         with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          repository: firestoned/bindcar
+          workflow-type: main
+          image-suffix: ""
 
-      - name: Generate tag
-        id: tag
-        run: |
-          DATE=$(date +%Y.%m.%d)
-          TAG="main-${DATE}-${{ github.run_number }}"
-          echo "tag=${TAG}" >> $GITHUB_OUTPUT
+      - name: Extract version for Distroless
+        id: version-distroless
+        uses: firestoned/github-actions/versioning/extract-version@v1.3.2
+        with:
+          repository: firestoned/bindcar
+          workflow-type: main
+          image-suffix: "-distroless"
+
+  docker:
+    name: Build and Push Docker Image - ${{ matrix.variant.name }}
+    runs-on: ubuntu-latest
+    needs: [build, extract-version]
+    permissions:
+      contents: read
+      packages: write
+    strategy:
+      fail-fast: false
+      matrix:
+        variant:
+          - name: Chainguard
+            dockerfile: docker/Dockerfile.chainguard
+            suffix: ""
+            description: "BIND9 RNDC API Server - Chainguard Zero-CVE"
+            image-tag: ${{ needs.extract-version.outputs.image-tag-chainguard }}
+            image-repository: ${{ needs.extract-version.outputs.image-repository-chainguard }}
+          - name: Distroless
+            dockerfile: docker/Dockerfile
+            suffix: "-distroless"
+            description: "BIND9 RNDC API Server - Google Distroless"
+            image-tag: ${{ needs.extract-version.outputs.image-tag-distroless }}
+            image-repository: ${{ needs.extract-version.outputs.image-repository-distroless }}
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Prepare Docker binaries
+        uses: ./.github/actions/prepare-docker-binaries
+
+      - name: Setup Docker environment
+        uses: firestoned/github-actions/docker/setup-docker@v1.3.2
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Extract metadata
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ghcr.io/${{ github.repository }}
+          images: ghcr.io/${{ matrix.variant.image-repository }}
           tags: |
-            type=raw,value=${{ steps.tag.outputs.tag }}
+            type=raw,value=${{ matrix.variant.image-tag }}
+            type=raw,value=main-{{date 'YYYY-MM-DD'}}
+            type=raw,value=sha-${{ needs.extract-version.outputs.short-sha }}
             type=raw,value=latest
-            type=sha,prefix=sha-
+          flavor: |
+            latest=false
 
-      - name: Build and push Docker image
+      - name: Build and push Docker image (${{ matrix.variant.name }})
+        id: docker_build
         uses: docker/build-push-action@v5
         with:
           context: .
-          platforms: linux/amd64
+          file: ${{ matrix.variant.dockerfile }}
+          platforms: linux/amd64,linux/arm64
           push: true
           tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          labels: |
+            ${{ steps.meta.outputs.labels }}
+            org.opencontainers.image.description=${{ matrix.variant.description }}
+          cache-from: type=gha,scope=${{ matrix.variant.name }}
+          cache-to: type=gha,mode=max,scope=${{ matrix.variant.name }}
+          sbom: true
+          provenance: true
 
   coverage:
     name: Code Coverage
@@ -210,3 +275,16 @@ jobs:
         with:
           name: coverage-report
           path: target/llvm-cov/html/
+
+  security:
+    name: Security Vulnerability Scan
+    runs-on: ubuntu-latest
+    needs: [license-check, verify-commits]
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Run security scan
+        uses: firestoned/github-actions/rust/security-scan@v1.3.2
+        with:
+          cargo-audit-version: "0.22.0"
