--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -1,3 +1,6 @@
+# Copyright (c) 2025 Erick Bourgeois, firestoned
+# SPDX-License-Identifier: MIT
+
 name: Pull Request CI
 
 on:
@@ -7,19 +10,49 @@ on:
 
 permissions:
   contents: read
-  packages: write
   id-token: write
-  pages: write
+  packages: write
+  security-events: write  # For uploading SARIF results
 
 env:
   CARGO_TERM_COLOR: always
   RUST_BACKTRACE: 1
-  K8S_OPENAPI_ENABLED_VERSION: "1.30"
+  K8S_OPENAPI_ENABLED_VERSION: "1.31"
 
 jobs:
-  lint:
-    name: Lint
+  license-check:
+    name: Verify SPDX License Headers
     runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Check license headers
+        uses: firestoned/github-actions/security/license-check@v1.3.2
+        with:
+          copyright-holder: "Erick Bourgeois, firestoned"
+          license-id: "MIT"
+
+  verify-commits:
+    name: Verify Signed Commits
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Fetch all history for verification
+
+      - name: Verify all commits are signed
+        uses: firestoned/github-actions/security/verify-signed-commits@v1.3.2
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          base-ref: origin/${{ github.base_ref }}
+          verify-mode: pr
+
+  format:
+    name: Check Formatting
+    runs-on: ubuntu-latest
+    needs: [license-check, verify-commits]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -27,69 +60,34 @@ jobs:
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@stable
         with:
-          components: rustfmt, clippy
-
-      - name: Cache cargo registry
-        uses: actions/cache@v4
-        with:
-          path: ~/.cargo/registry
-          key: ${{ runner.os }}-cargo-registry-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-cargo-registry-
-
-      - name: Cache cargo index
-        uses: actions/cache@v4
-        with:
-          path: ~/.cargo/git
-          key: ${{ runner.os }}-cargo-git-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-cargo-git-
-
-      - name: Cache cargo build
-        uses: actions/cache@v4
-        with:
-          path: target
-          key: ${{ runner.os }}-cargo-build-target-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-cargo-build-target-
+          components: rustfmt
 
       - name: Check formatting
         run: make fmt
 
-      - name: Run clippy
-        run: make clippy
-
-  docs:
-    name: Build Documentation
+  clippy:
+    name: Clippy
     runs-on: ubuntu-latest
+    needs: format
     steps:
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup Rust
+      - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@stable
         with:
-          toolchain: stable
+          components: clippy
 
-      - name: Setup Rust cache
-        uses: Swatinem/rust-cache@v2
+      - name: Cache cargo dependencies
+        uses: firestoned/github-actions/rust/cache-cargo@v1.3.2
 
-      - name: Install mdBook and preprocessors
-        run: |
-          mkdir -p ~/bin
-          curl -sSL https://github.com/rust-lang/mdBook/releases/download/v0.5.1/mdbook-v0.5.1-x86_64-unknown-linux-gnu.tar.gz | tar -xz -C ~/bin
-          echo "$HOME/bin" >> $GITHUB_PATH
-          echo "$HOME/.cargo/bin" >> $GITHUB_PATH
-          cargo install mdbook-mermaid --version 0.17.0
-
-      - name: Build documentation
-        run: |
-          make docs-clean docs
+      - name: Run clippy
+        run: make clippy
 
   build:
     name: Build - ${{ matrix.platform.name }}
     runs-on: ${{ matrix.platform.os }}
-    needs: lint
+    needs: [format, clippy]
     strategy:
       fail-fast: false
       matrix:
@@ -108,76 +106,35 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Install Rust toolchain
-        uses: dtolnay/rust-toolchain@stable
+      - name: Setup Rust build environment
+        uses: firestoned/github-actions/rust/setup-rust-build@v1.3.2
         with:
-          targets: ${{ matrix.platform.target }}
+          target: ${{ matrix.platform.target }}
 
-      - name: Cache cross binary
-        if: matrix.platform.target == 'aarch64-unknown-linux-gnu'
-        id: cache-cross
-        uses: actions/cache@v4
+      - name: Build binary
+        uses: firestoned/github-actions/rust/build-binary@v1.3.2
         with:
-          path: ~/.cargo/bin/cross
-          key: ${{ runner.os }}-cross-v0.2.5
-          restore-keys: |
-            ${{ runner.os }}-cross-
+          target: ${{ matrix.platform.target }}
 
-      - name: Install cross for ARM64 builds
-        if: matrix.platform.target == 'aarch64-unknown-linux-gnu' && steps.cache-cross.outputs.cache-hit != 'true'
-        run: |
-          cargo install cross --git https://github.com/cross-rs/cross --tag v0.2.5
-          cross --version
-
-      - name: Verify Docker for cross (ARM64)
-        if: matrix.platform.target == 'aarch64-unknown-linux-gnu'
-        run: |
-          docker --version
-          docker info
-
-      - name: Cache cargo registry
-        uses: actions/cache@v4
+      - name: Generate SBOM
+        uses: firestoned/github-actions/rust/generate-sbom@v1.3.2
         with:
-          path: ~/.cargo/registry
-          key: ${{ runner.os }}-cargo-registry-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-cargo-registry-
+          target: ${{ matrix.platform.target }}
 
-      - name: Cache cargo index
-        uses: actions/cache@v4
-        with:
-          path: ~/.cargo/git
-          key: ${{ runner.os }}-cargo-git-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-cargo-git-
-
-      - name: Cache cargo build
-        uses: actions/cache@v4
-        with:
-          path: target
-          key: ${{ runner.os }}-${{ matrix.platform.target }}-cargo-build-target-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-${{ matrix.platform.target }}-cargo-build-target-
-
-      - name: Build (release) - x86_64
-        if: matrix.platform.target == 'x86_64-unknown-linux-gnu'
-        run: cargo build --release --target ${{ matrix.platform.target }} --verbose
-
-      - name: Build (release) - ARM64 with cross
-        if: matrix.platform.target == 'aarch64-unknown-linux-gnu'
-        run: cross build --release --target ${{ matrix.platform.target }} --verbose
-
-      - name: Upload build artifacts
+      - name: Upload binary and SBOM artifacts
         uses: actions/upload-artifact@v4
         with:
           name: ${{ matrix.platform.artifact_name }}
-          path: target/${{ matrix.platform.target }}/release/${{ matrix.platform.binary_name }}
+          path: |
+            target/${{ matrix.platform.target }}/release/${{ matrix.platform.binary_name }}
+            *.cdx.*
           retention-days: 1
           if-no-files-found: error
 
   test:
     name: Test
     runs-on: ubuntu-latest
+    needs: build
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -185,123 +142,123 @@ jobs:
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@stable
 
-      - name: Cache cargo registry
-        uses: actions/cache@v4
+      - name: Download x86_64 build artifact
+        uses: actions/download-artifact@v4
         with:
-          path: ~/.cargo/registry
-          key: ${{ runner.os }}-cargo-registry-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-cargo-registry-
+          name: bindcar-linux-amd64
+          path: target/x86_64-unknown-linux-gnu/release/
 
-      - name: Cache cargo index
-        uses: actions/cache@v4
-        with:
-          path: ~/.cargo/git
-          key: ${{ runner.os }}-cargo-git-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-cargo-git-
-
-      - name: Cache cargo build
-        uses: actions/cache@v4
-        with:
-          path: target
-          key: ${{ runner.os }}-cargo-build-target-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-cargo-build-target-
+      - name: Cache cargo dependencies
+        uses: firestoned/github-actions/rust/cache-cargo@v1.3.2
 
       - name: Run tests
         run: make test
 
-  docker:
-    name: Docker Build
+  extract-version:
+    name: Extract Version Information
     runs-on: ubuntu-latest
-    needs: test
-    permissions:
-      contents: read
-      packages: write
+    needs: format
+    outputs:
+      image-tag-chainguard: ${{ steps.version-chainguard.outputs.image-tag }}
+      image-tag-distroless: ${{ steps.version-distroless.outputs.image-tag }}
+      image-repository-chainguard: ${{ steps.version-chainguard.outputs.image-repository }}
+      image-repository-distroless: ${{ steps.version-distroless.outputs.image-repository }}
+      short-sha: ${{ steps.version-chainguard.outputs.short-sha }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v3
+      - name: Extract version for Chainguard
+        id: version-chainguard
+        uses: firestoned/github-actions/versioning/extract-version@v1.3.2
         with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          repository: firestoned/bindcar
+          workflow-type: pr
+          pr-number: ${{ github.event.pull_request.number }}
+          image-suffix: ""
 
-      - name: Generate tag
-        id: tag
-        run: |
-          DATE=$(date +%Y.%m.%d)
-          PR_NUMBER=${{ github.event.pull_request.number }}
-          TAG="pr-${DATE}-${PR_NUMBER}"
-          echo "tag=${TAG}" >> $GITHUB_OUTPUT
+      - name: Extract version for Distroless
+        id: version-distroless
+        uses: firestoned/github-actions/versioning/extract-version@v1.3.2
+        with:
+          repository: firestoned/bindcar
+          workflow-type: pr
+          pr-number: ${{ github.event.pull_request.number }}
+          image-suffix: "-distroless"
+
+  docker:
+    name: Build and Push Docker Image - ${{ matrix.variant.name }}
+    runs-on: ubuntu-latest
+    needs: [test, extract-version]
+    permissions:
+      contents: read
+      packages: write
+    strategy:
+      fail-fast: false
+      matrix:
+        variant:
+          - name: Chainguard
+            dockerfile: docker/Dockerfile.chainguard
+            suffix: ""
+            description: "BIND9 RNDC API Server - Chainguard Zero-CVE"
+            image-tag: ${{ needs.extract-version.outputs.image-tag-chainguard }}
+            image-repository: ${{ needs.extract-version.outputs.image-repository-chainguard }}
+          - name: Distroless
+            dockerfile: docker/Dockerfile
+            suffix: "-distroless"
+            description: "BIND9 RNDC API Server - Google Distroless"
+            image-tag: ${{ needs.extract-version.outputs.image-tag-distroless }}
+            image-repository: ${{ needs.extract-version.outputs.image-repository-distroless }}
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Prepare Docker binaries
+        uses: ./.github/actions/prepare-docker-binaries
+
+      - name: Setup Docker environment
+        uses: firestoned/github-actions/docker/setup-docker@v1.3.2
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Extract metadata
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ghcr.io/${{ github.repository }}
+          images: ghcr.io/${{ matrix.variant.image-repository }}
           tags: |
-            type=raw,value=${{ steps.tag.outputs.tag }}
-            type=sha,prefix=sha-
+            type=raw,value=${{ matrix.variant.image-tag }}
+            type=raw,value=sha-${{ needs.extract-version.outputs.short-sha }}
+          flavor: |
+            latest=false
 
-      - name: Build and push Docker image
+      - name: Build and push Docker image (${{ matrix.variant.name }})
         uses: docker/build-push-action@v5
         with:
           context: .
-          platforms: linux/amd64
+          file: ${{ matrix.variant.dockerfile }}
+          platforms: linux/amd64,linux/arm64
           push: true
           tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          labels: |
+            ${{ steps.meta.outputs.labels }}
+            org.opencontainers.image.description=${{ matrix.variant.description }}
+          cache-from: type=gha,scope=${{ matrix.variant.name }}
+          cache-to: type=gha,mode=max,scope=${{ matrix.variant.name }}
+          sbom: true
+          provenance: true
 
   security:
-    name: Security Audit
+    name: Security Vulnerability Scan
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Install Rust toolchain
-        uses: dtolnay/rust-toolchain@stable
-
-      - name: Cache cargo registry
-        uses: actions/cache@v4
+      - name: Run security scan
+        uses: firestoned/github-actions/rust/security-scan@v1.3.2
         with:
-          path: ~/.cargo/registry
-          key: ${{ runner.os }}-cargo-registry-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-cargo-registry-
-
-      - name: Cache cargo index
-        uses: actions/cache@v4
-        with:
-          path: ~/.cargo/git
-          key: ${{ runner.os }}-cargo-git-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-cargo-git-
-
-      - name: Cache cargo-audit binary
-        uses: actions/cache@v4
-        id: cache-cargo-audit
-        with:
-          path: ~/.cargo/bin/cargo-audit
-          key: ${{ runner.os }}-cargo-audit-latest
-          restore-keys: |
-            ${{ runner.os }}-cargo-audit-
-
-      - name: Install cargo-audit
-        if: steps.cache-cargo-audit.outputs.cache-hit != 'true'
-        run: cargo install cargo-audit --locked
-
-      - name: Run security audit
-        run: cargo audit
+          cargo-audit-version: "0.22.0"
 
   coverage:
     name: Code Coverage
