--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bindcar"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
 rust-version = "1.75"
 authors = ["Erick Bourgeois <firestoned@firestoned.io>"]
@@ -52,12 +52,15 @@ utoipa-swagger-ui = { version = "9", features = ["axum"] }
 prometheus = "0.14"
 lazy_static = "1.4"
 
+# Rate limiting
+tower_governor = "0.8"
+
 # RNDC client
 rndc = "0.1.3"
 
 # Kubernetes client (optional, for token validation)
-kube = { version = "0.97", features = ["client", "rustls-tls"], optional = true }
-k8s-openapi = { version = "0.23", default-features = false, optional = true }
+kube = { version = "2.0", features = ["client", "rustls-tls"], optional = true }
+k8s-openapi = { version = "0.26", default-features = false, optional = true }
 
 [features]
 default = []
@@ -70,7 +73,7 @@ tower = { version = "0.5", features = ["util"] }
 serial_test = "3.2"
 
 # Enable k8s-openapi version for tests and examples
-k8s-openapi = { version = "0.23", features = ["v1_30"] }
+k8s-openapi = { version = "0.26", features = ["v1_31"] }
 
 [profile.release]
 opt-level = 3
