--- a/Cargo.toml
+++ b/Cargo.toml
@@ -58,6 +58,9 @@ tower_governor = "0.8"
 # RNDC client
 rndc = "0.1.3"
 
+# Parsing
+nom = "7"
+
 # Kubernetes client (optional, for token validation)
 kube = { version = "2.0", features = ["client", "rustls-tls"], optional = true }
 k8s-openapi = { version = "0.26", default-features = false, optional = true }
