Add more testing and docs for the RNDC parsing
Signed-off-by: Erick Bourgeois <erick@jeb.ca>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -74,6 +74,7 @@ k8s-token-review = ["kube", "k8s-openapi"]
 serde_json = "1.0"
 tower = { version = "0.5", features = ["util"] }
 serial_test = "3.2"
+tempfile = "3.14"
 
 # Enable k8s-openapi version for tests and examples
 k8s-openapi = { version = "0.26", features = ["v1_31"] }
