--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -46,13 +46,17 @@ jobs:
         with:
           target: x86_64-unknown-linux-gnu
 
-      - name: Install mdBook and preprocessors
-        run: |
-          mkdir -p ~/bin
-          curl -sSL https://github.com/rust-lang/mdBook/releases/download/v0.5.1/mdbook-v0.5.1-x86_64-unknown-linux-gnu.tar.gz | tar -xz -C ~/bin
-          echo "$HOME/bin" >> "$GITHUB_PATH"
-          echo "$HOME/.cargo/bin" >> "$GITHUB_PATH"
-          cargo install mdbook-mermaid --version 0.17.0
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+
+      - name: Install Poetry
+        uses: snok/install-poetry@v1
+        with:
+          version: 1.8.2
+          virtualenvs-create: true
+          virtualenvs-in-project: true
 
       - name: Build documentation
         run: make docs
@@ -65,7 +69,7 @@ jobs:
         if: github.ref == 'refs/heads/main'
         uses: actions/upload-pages-artifact@v3
         with:
-          path: docs/target
+          path: docs/site
 
   deploy:
     name: Deploy to GitHub Pages
